feat: zero-skipping done

--- a/Kristelle/final_report.bib
+++ b/Kristelle/final_report.bib
@@ -587,3 +587,22 @@
 	pages = {152--154},
 	file = {PDF:C\:\\Users\\iamkr\\Zotero\\storage\\AHCY2MJU\\Park et al. - 2021 - 9.5 A 6K-MAC Feature-Map-Sparsity-Aware Neural Processing Unit in 5nm Flagship Mobile SoC.pdf:application/pdf},
 }
+
+@article{seo_versa_2024,
+	title = {{VerSA}: {Versatile} {Systolic} {Array} {Architecture} for {Sparse} and {Dense} {Matrix} {Multiplications}},
+	volume = {13},
+	issn = {2079-9292},
+	shorttitle = {{VerSA}},
+	url = {https://www.mdpi.com/2079-9292/13/8/1500},
+	doi = {10.3390/electronics13081500},
+	abstract = {A key part of modern deep neural network (DNN) applications is matrix multiplication. As DNN applications are becoming more diverse, there is a need for both dense and sparse matrix multiplications to be accelerated by hardware. However, most hardware accelerators are designed to accelerate either dense or sparse matrix multiplication. In this paper, we propose VerSA, a versatile systolic array architecture for both dense and sparse matrix multiplications. VerSA employs intermediate paths and SRAM buffers between the rows of the systolic array (SA), thereby enabling an early termination in sparse matrix multiplication with a negligible performance overhead when running dense matrix multiplication. When running sparse matrix multiplication, 256 × 256 VerSA brings performance (i.e., an inverse of execution time) improvement and energy saving by 1.21×–1.60× and 7.5–30.2\%, respectively, when compared to the conventional SA. When running dense matrix multiplication, VerSA results in only a 0.52\% performance overhead compared to the conventional SA.},
+	language = {en},
+	number = {8},
+	urldate = {2025-10-15},
+	journal = {Electronics},
+	author = {Seo, Juwon and Kong, Joonho},
+	month = apr,
+	year = {2024},
+	pages = {1500},
+	file = {PDF:C\:\\Users\\iamkr\\Zotero\\storage\\ZB6CP4QF\\Seo and Kong - 2024 - VerSA Versatile Systolic Array Architecture for Sparse and Dense Matrix Multiplications.pdf:application/pdf},
+}
